--- a/index.html
+++ b/index.html
@@ -4,26 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">  
     <title>Document</title>
 </head>
 <body>
-    <main>
-        <div>
-            <p>Um dia desses, dentro de um livro da biblioteca do colegio,
-                eu descobri uma carta antiga sobre uma cidade perdida,
-                escondida por riquezas e belezas naturais.
-                Nessa carta, a autora deixa algumas pistas para
-                encontra essa cidade e eu decidi segui-las! 
-            </p>
-            <button></button>
-            <button></button>
-        </div>
-        <div>
-            <p></p>
-            <button></button>
-            <button></button>
-        </div>
+   <main>
+       <div class="passo ativo" id="passo-0">
+        <img src="cenario-passo0.png" alt="cenario-passo0">
+        <p>Um dia desses, dentro de um livro da biblioteca do colégio,
+            eu descobri uma carta antiga sobre uma cidade perdida,
+            escondida por riquezas e belezas naturais.
+            Nessa carta, a autora deixa algumas pistas para 
+            encontrar essa cidade e eu decidi segui-las!
+        </p>
+          <button class="btn-proximo" data-proximo="1">Pinhais</button>
+          <button class="btn-proximo" data-proximo="2">Curitiba</button>
+       </div>
+       <div class="passo" id="passo-2">
+        <p>Em Paranaguá, você visita a parte histórica da cidade.
+            Na certa, uma das pistas indica que para localizar a entrada para a cidade perdida você deve Procurar
+            a próxima pista em um dos pontos turísticos da cidade. Por qual você começa?</p>
+            <button class="btn-proximo" data-proxima="5">Investigar as igrajas antigas</button>
+            <button class="btn-proximo" data-proxima="6">Explorar as praias próximas</button>
+       </div>
+       <div class="passo" id="passo-1">
+    <p>Vocẽ chegou á Bombinhas!Um município brasileiro do estado de Santa Catarina. </p>
+            <button class="btn-proximo" data-proximo="3">Procurar a pista no Museu de História Natural Charles Darwin</button>
+            <button class="btn-proximo" data-proximo="4"> Desistir e voltar para casa</button>
+     </div>
     </main>
 </body>
 </html>
